# penplotter

./: .gitmodules  CMakeLists.txt  convert.py
src/: fonts.cpp  fonts.h  main.cpp
src/arch/: input.h  pen.h  sleep.h  stepperMotor.h
src/arch/rp2040/: input.cpp  pen.cpp  sleep.cpp  stepperMotor.cpp
src/arch/sim/: arch.h  pen.cpp  sleep.cpp  stepperMotor.cpp
src/config/: planner.h
src/motion/: planner.cpp  planner.h  plannerConfig.cpp  plannerConfig.h  stepper.cpp  stepper.h
